FSPA-341 #comment fixed bd-button component

--- a/src/app/shared/components/bd-buttons/bd-button/bd-button.component.html
+++ b/src/app/shared/components/bd-buttons/bd-button/bd-button.component.html
@@ -1,7 +1,7 @@
 <button
 [disabled]="disabled"
 [type]="type"
-class="common {{color}}"
+class="{{color}} {{size}}"
 [class.bd-disabled]="disabled"
 >
 {{text}}
