--- a/src/app/top-panel/top-panel.component.html
+++ b/src/app/top-panel/top-panel.component.html
@@ -3,7 +3,8 @@
 </span>
 <input type="text" placeholder="Search for anything by number, name, date or amount. You can also type action you would like to perform...">
 <div class="right">
-
+  <bd-button class="new-load" [color]="'primary'" [size]="'small'" [text]="'New Load'">
+  </bd-button>
 <bd-notification-popover
     [width]="400"
     [notificationType]="notificationTypeEnum.Task"
