--- a/src/app/top-panel/top-panel.component.scss
+++ b/src/app/top-panel/top-panel.component.scss
@@ -23,6 +23,14 @@ input {
 .right {
   display: flex;
   height: 100%;
+  align-items: center;
+
+  // .new-load {
+  //   width: 74px;
+  //   height: 29px;
+  //   font-size: $tiny-font-size;
+  //   cursor: pointer;
+  // }
 
   span {
     position: relative;
