FSPA-366 add location form

--- a/src/app/forms/company-form/company-form.component.html
+++ b/src/app/forms/company-form/company-form.component.html
@@ -16,8 +16,8 @@
 			</bd-input>
 		</bd-form-section>
 		<navigation-anchor id="company-addresses" [isNestedForm]="isNestedForm"></navigation-anchor>
-		<bd-form-section [labelText]="'COMPANY > ADDRESSES'" [isExpanded]='isExpanded' *ngIf='isExpanded' >
-			<addresses-form [formArray]='companyForm.controls.addresses' (update)="onAddressUpdate($event)" [disabled]="disabled" (updatePlace)="onAddressPlaceUpdate($event)" (remove)="onAddressRemove($event)" (add)="onAddressAdd($event)"  [items]='addresses$ | async' [viewMode]="viewMode"></addresses-form>
+		<bd-form-section [labelText]="'COMPANY > LOCATIONS'" [isExpanded]='isExpanded' *ngIf='isExpanded' >
+			<locations-form [formArray]='companyForm.controls.locations' (update)="onLocationUpdate($event)" [disabled]="disabled" (updatePlace)="onLocationPlaceUpdate($event)" (remove)="onLocationRemove($event)" (add)="onLocationAdd($event)"  [items]='locations$ | async' [viewMode]="viewMode"></locations-form>
 		</bd-form-section>
 		<navigation-anchor id="company-contacts" [isNestedForm]="isNestedForm"></navigation-anchor>
 		<bd-form-section [labelText]="'CONTACTS'" [isExpanded]='isExpanded' *ngIf='isExpanded'>
