--- a/src/app/top-panel/top-panel.component.html
+++ b/src/app/top-panel/top-panel.component.html
@@ -3,8 +3,7 @@
 </span>
 <input type="text" placeholder="Search for anything by number, name, date or amount. You can also type action you would like to perform...">
 <div class="right">
-  <bd-button class="new-load" [color]="'primary'" [size]="'small'" [text]="'New Load'">
-  </bd-button>
+  <a [routerLink]="['/loads/0']"><bd-button class="new-load" [color]="'primary'" [size]="'small'" [text]="'New Load'"></bd-button></a>
 <bd-notification-popover
     [width]="400"
     [notificationType]="notificationTypeEnum.Task"
