--- a/src/app/loads/components/load-view-mode-card/components/trip-view/trip-view.component.html
+++ b/src/app/loads/components/load-view-mode-card/components/trip-view/trip-view.component.html
@@ -1,23 +1,9 @@
 <div class="trip-container" [class.expanded]="isExpanded">
   <div class="trip-info-container">
     <div class="left-panel">
-      <div class="trip-info-header">
-        <span class="trip-number">TR{{tripData.trip.number}} : </span>
-        <div class="buttons-panel">
-          <button class="icon-fax"></button>
-          <button class="icon-call"></button>
-          <span [bd-popover]="phonePopover" [popoverOnHover]="true">
-              <button class="icon-message"></button>
-                  <bd-popover-content
-                      #phonePopover
-                      placement="auto"
-                      [width]="100"
-                      [horizontalOffset]="-10"
-                      [closeOnClickOutside]="closeOnClickOutside">
-                           <phone-popover [phoneNumber]="phoneNumber"></phone-popover>
-                   </bd-popover-content>
-            </span>
-        </div>
+      <div class="info-panel">
+        <div class="trip-info-header">
+        <span class="trip-number">TR{{tripData.trip.number}}</span>
       </div>
       <div class="driver-container">
         <div 
@@ -39,6 +25,22 @@
       <span class="trailer-info">
           {{tripData.trip.trailer.make}} {{tripData.trip.trailer.number}}, {{tripData.trip.trailer.model}}
       </span>
+      </div>
+      <div class="buttons-panel">
+          <button class="icon-fax"></button>
+          <button class="icon-call"></button>
+          <span [bd-popover]="phonePopover" [popoverOnHover]="true">
+              <button class="icon-message"></button>
+                  <bd-popover-content
+                      #phonePopover
+                      placement="auto"
+                      [width]="100"
+                      [horizontalOffset]="-10"
+                      [closeOnClickOutside]="closeOnClickOutside">
+                           <phone-popover [phoneNumber]="phoneNumber"></phone-popover>
+                   </bd-popover-content>
+            </span>
+        </div>
     </div>
     <div class="right-panel">
       <div class="appointment-type">
