--- a/src/app/loads/components/load-view-mode-card/load-view-mode-card.component.scss
+++ b/src/app/loads/components/load-view-mode-card/load-view-mode-card.component.scss
@@ -1,11 +1,11 @@
 @import '../../../../assets/styles/variables';
 @import '../../../../assets/styles/font-icons';
 
-$element-size: 16px;
+$element-height: 18px;
+$element-width: 16px;
 $text-margin: 5px;
 
 .stop-view-mode-section {
-
   button {
     padding: 0;
     border: 0;
@@ -14,19 +14,37 @@ $text-margin: 5px;
     &:focus {
       outline: 0;
     }
-   }
+  }
 
   span {
-    line-height: $element-size;
+    line-height: $element-height;
   }
 
   display: flex;
-  overflow: hidden;
   border: $border;
   background: $light-blue;
   font-size: $tiny-font-size;
   flex-direction: column;
   border-radius: $default-border-radius;
+
+  .trip-view-container {
+
+    .trip-view-item {
+      display: none;
+
+      &:first-of-type {
+        display: block;
+      }
+    }
+  }
+
+  &.expanded-view {
+    .trip-view-container {
+      .trip-view-item {
+        display: block;
+      }
+    }
+  }
 
   .stop-info-container {
     position: relative;
@@ -34,6 +52,8 @@ $text-margin: 5px;
     background: $white;
     border-bottom: $border;
     border-left: 4px solid $grey;
+    border-top-left-radius: $default-border-radius;
+    border-top-right-radius: $default-border-radius;
 
     &.pickup {
       border-left-color: $pickup-view-mode-color;
@@ -52,8 +72,9 @@ $text-margin: 5px;
       top: 0;
       width: 4px;
       height: 100%;
-      background-image: url('assets/img/combined_stop_border.png');
+      background-image: url('assets/img/stripped-line.svg');
       background-repeat: repeat-y;
+      left: -1px;
     }
 
     .facility-info {
@@ -66,16 +87,25 @@ $text-margin: 5px;
 
       .title {
         color: $black;
-        margin-left: $element-size;
+        line-height: 12px;
+        margin-left: $element-width;
         font-weight: bold;
-        max-height: $element-size;
+        max-height: $element-height;
+        margin-bottom: 10px;
       }
 
       .info-item {
         display: flex;
+        margin-bottom: 15px;
 
         .item-icon {
+          color: $dark-grey;
+          line-height: 13px;
           margin-right: $text-margin;
+        }
+
+        .facility-address {
+          line-height: 13px;
         }
       }
     }
@@ -92,15 +122,16 @@ $text-margin: 5px;
 
       .btn-container {
         position: absolute;
-        top: $default-margin;
+        top: $default-margin - 1px;
         right: $default-margin;
         display: none;
+        height: $default-margin + 2px;
         background: $white;
-        color: $blue;
         transition: display .2s;
 
         button {
-          padding: 0 $text-margin;
+          color: $blue;
+          padding-left: $default-margin;
         }
 
         &:hover {
@@ -111,13 +142,15 @@ $text-margin: 5px;
       .notes {
         overflow: hidden;
         color: $black;
-        white-space: nowrap;
+        line-height: $element-height;
+        margin-top: 15px;
         text-overflow: ellipsis;
-        max-height: $element-size;
       }
     }
+  }
 
-    &:hover {
+  &:hover {
+    .stop-info-container {
       .business-hours-container {
         .btn-container {
           display: block;
