FSPA-366 update driver and company forms

--- a/src/app/drivers/components/driver-edit.component.html
+++ b/src/app/drivers/components/driver-edit.component.html
@@ -7,9 +7,10 @@
   </form-navigation>
   <driver-form
     [scrollable]="true"
-    [driver]="selectedItem"
+    [driver]="selected$ | async"
     [viewMode]="viewMode"
     (save)="onItemSave($event)"
+    (updatePlace)="onPlaceUpdate($event)"
     (cancel)="onItemCancel()">
   </driver-form>
 </div>
