--- a/src/app/shared/components/bd-buttons/bd-add-remove-button/bd-add-remove-button.component.scss
+++ b/src/app/shared/components/bd-buttons/bd-add-remove-button/bd-add-remove-button.component.scss
@@ -5,7 +5,7 @@
   display: flex;
   width: 100%;
   height: $form-control-height;
-  padding: 0;
+  padding: 0 $default-margin;
   border: 0;
   text-align: right;
   cursor: pointer;
@@ -17,17 +17,12 @@
   align-items: center;
 
   .suffix-label {
-    margin: auto $default-margin auto 6px;
+    margin-left: $default-margin;
   }
 
   .btn-icon {
     font-size: $small-font-size;
-    margin-right: $default-margin;
     flex: 1;
-  }
-
-  .prefix-label {
-    margin-left: $default-margin;
   }
 
   .text {
