FSPA-366 #comment popover ui remarks

--- a/src/app/loads/components/load-stop-card/components/company-popover/company-popover.component.html
+++ b/src/app/loads/components/load-stop-card/components/company-popover/company-popover.component.html
@@ -15,7 +15,7 @@
     <span>{{companyBillingAddress.city}}, {{companyBillingAddress.state}}</span>
     <span>{{companyBillingAddress.zip}}</span>
   </div>
-  <div class="section" *ngIf="companyAddress">
+  <div class="section">
     <span>{{phone}}</span>
   </div>
 </div>
