--- a/src/app/shared/components/bd-checkboxes/bd-checkboxes.component.html
+++ b/src/app/shared/components/bd-checkboxes/bd-checkboxes.component.html
@@ -5,7 +5,7 @@
   <div class="checkboxes">
     <div class="bd-checkbox" *ngFor="let item of items">
       <bd-checkbox [checked]="isChecked(item)" [disabled]="disabled" (checkedChange)="onCheckedChange(item)"></bd-checkbox>
-      {{item}}
+      <span (click)="onCheckedChange(item)">{{item}}</span>
     </div>
   </div>
 </div>
