--- a/src/app/shared/components/bd-checkboxes/bd-checkboxes.component.scss
+++ b/src/app/shared/components/bd-checkboxes/bd-checkboxes.component.scss
@@ -18,8 +18,8 @@
     display: flex;
     height: $form-control-height;
     color: $dark-grey;
-    font-size: $mini-font-size;
-    min-width: 80px;
+    font-size: $input-label-font-size;
+    min-width: 24%;
     font-weight: 300;
     text-transform: uppercase;
     align-self: flex-start;
