--- a/src/app/shared/components/bd-input/bd-input.component.scss
+++ b/src/app/shared/components/bd-input/bd-input.component.scss
@@ -52,10 +52,10 @@
 
   .bd-label {
     display: flex;
-    width: 80px;
+    width: 24%;
     height: $form-control-height;
     color: $label-default-color;
-    font-size: $mini-font-size;
+    font-size: $input-label-font-size;
     align-self: flex-start;
     margin-left: -$default-margin;
     margin-right: $default-margin * 2;
@@ -84,7 +84,7 @@
       @include flex-element;
       display: flex;
       height: $form-control-height;
-      font-size: $small-font-size;
+      font-size: $form-control-font-size;
       align-self: flex-start;
       align-items: center;
       justify-content: flex-end;
@@ -111,7 +111,7 @@
 
     .bd-input-suffix {
       @include flex-element;
-      font-size: $small-font-size;
+      font-size: $form-control-font-size;
       flex-grow: 0;
       margin-left: $default-margin;
     }
@@ -149,7 +149,7 @@
       width: auto;
       margin: 0;
       color: $label-default-color;
-      font-size: $small-font-size;
+      font-size: $form-control-font-size;
       text-align: left;
       flex-grow: 1;
       justify-content: flex-start;
