FSPA-394 #comment changed bd-input to bd-textarea, remove odd code

--- a/src/app/forms/dropoff-form/dropoff-form.component.html
+++ b/src/app/forms/dropoff-form/dropoff-form.component.html
@@ -13,9 +13,9 @@
     (select)="onCommoditySelect($event)"
     [viewMode]="viewMode">
   </drop-off-commodity-form>
-  <bd-input
+  <bd-textarea
     class="bd-form-control"
-    placeholder="Notes"
-    formControlName="notes">
-  </bd-input>
+    formControlName="notes"
+    [labelText]="'Notes'">
+  </bd-textarea>
 </form>
