--- a/src/app/forms/pickup-form/pickup-form.component.html
+++ b/src/app/forms/pickup-form/pickup-form.component.html
@@ -12,9 +12,9 @@
     [items]="pickupCommodities$ | async"
     [viewMode]="viewMode">
   </pick-up-commodity-form>
-  <bd-input
+  <bd-textarea
     class="bd-form-control"
-    placeholder="Notes"
-    formControlName="notes">
-  </bd-input>
+    formControlName="notes"
+    [labelText]="'Notes'">
+  </bd-textarea>
 </form>
