--- a/src/app/shared/components/bd-checkbox/bd-checkbox.component.scss
+++ b/src/app/shared/components/bd-checkbox/bd-checkbox.component.scss
@@ -1,10 +1,12 @@
 @import '../../../../assets/styles/variables';
 
+$checkbox-size: 14px;
+
 .checkbox-container {
   position: relative;
   overflow: hidden;
-  width: 16px;
-  height: 16px;
+  width: $checkbox-size;
+  height: $checkbox-size;
   border: $border;
   background: $white;
   border-radius: $default-border-radius;
