change input/textarea size

--- a/src/app/shared/components/bd-input/bd-input.component.scss
+++ b/src/app/shared/components/bd-input/bd-input.component.scss
@@ -99,11 +99,13 @@
 
       input {
         @include input-textarea;
+        font-size: $form-control-font-size;
       }
 
       textarea {
         @include input-textarea;
         overflow: hidden;
+        font-size: $form-control-font-size;
         align-self: flex-start;
       }
     }
