fix filter-item font sizes

--- a/src/app/shared/components/filter-container/components/filter-item/filter-item.component.scss
+++ b/src/app/shared/components/filter-container/components/filter-item/filter-item.component.scss
@@ -3,7 +3,7 @@
 .filter-item-container {
   display: flex;
   height: $form-control-height;
-  font-size: $small-font-size;
+  font-size: $form-control-font-size;
   padding-right: $default-margin;
   border-bottom: $border;
   align-items: center;
