FSPA-389 work on detail router logic

--- a/src/app/drivers/components/driver-detail/driver-detail.component.html
+++ b/src/app/drivers/components/driver-detail/driver-detail.component.html
@@ -1,7 +1,9 @@
 <div *ngIf="selectedItem">
-  <form-navigation
+  <bd-button class="add-button" [color]="'primary'" [text]="'Edit'" (click)="onEdit()">
+  </bd-button>
+  <!--<form-navigation
     sticky
     [title]="'Driver'"
     [anchors]="anchors">
-  </form-navigation>
+  </form-navigation>-->
 </div>
