FSPA-394 #comment fixed bd textarea styles

--- a/src/app/loads/components/load-stop-card/load-stop-card.component.scss
+++ b/src/app/loads/components/load-stop-card/load-stop-card.component.scss
@@ -104,3 +104,18 @@
     border-radius: $form-control-height;
   }
 }
+
+:host {
+  background: $white;
+
+  &.active,
+  &:hover {
+    background: $light-blue;
+  }
+
+  &.active {
+    .card-section {
+      border-bottom-color: $blue;
+    }
+  }
+}
