--- a/src/app/shared/components/bd-input/bd-input.component.scss
+++ b/src/app/shared/components/bd-input/bd-input.component.scss
@@ -42,6 +42,7 @@
   position: relative;
   overflow: hidden;
   width: 100%;
+  height: $form-control-height;
   padding: 0 $default-margin;
   border-bottom: $border;
   margin-bottom: 0;
@@ -104,7 +105,7 @@
         @include input-textarea;
         overflow: hidden;
         align-self: flex-start;
-        margin-top: 1px;
+        margin-top: 7px;
       }
     }
 
