--- a/src/app/forms/commodities-forms/pick-up-commodity-form/pick-up-commodity-form.component.html
+++ b/src/app/forms/commodities-forms/pick-up-commodity-form/pick-up-commodity-form.component.html
@@ -10,4 +10,4 @@
   (update)="updateItem($event)"
   (remove)="removeItem(data)">
 </pickup-commodity>
-<bd-add-button class="bd-form-control" (mousedown)="addNewItem()"></bd-add-button>
+<bd-add-button class="bd-form-control" (onClick)="addNewItem()"></bd-add-button>
