--- a/src/app/shared/components/bd-buttons/bd-add-remove-button/bd-add-remove-button.component.html
+++ b/src/app/shared/components/bd-buttons/bd-add-remove-button/bd-add-remove-button.component.html
@@ -1,9 +1,11 @@
-<button
+<div
   [class.bd-disabled]="disabled"
-  [disabled]="disabled"
-  [type]="type"
-  class="button">
+  class="button-container">
   <span *ngIf="prefixLabel.length" class="prefix-label text">{{prefixLabel}}</span>
-  <span class="btn-icon {{iconClass}}"></span>
+  <button
+    [disabled]="disabled"
+    [type]="type"
+    class="btn-icon {{iconClass}}">
+  </button>
   <span *ngIf="suffixLabel.length" class="suffix-label text">{{suffixLabel}}</span>
-</button>
+</div>
