move contact-info component to shared module

--- a/src/app/loads/components/load-view-mode-card/load-view-mode-card.component.html
+++ b/src/app/loads/components/load-view-mode-card/load-view-mode-card.component.html
@@ -11,7 +11,7 @@
                 <span class="item-icon icon-location"></span>
                 <span class="item-text facility-address">{{stop.facility.address.streetAddress1}}, {{stop.facility.address.city}}, {{stop.facility.address.state}}, {{stop.facility.address.zip}}</span>
             </div>
-            <contact-info-container [contactCollection]="getContactInfoCollection(stop.facility.contactInfo)"></contact-info-container>
+            <bd-contact-info [contactCollection]="getContactInfoCollection(stop.facility.contactInfo)"></bd-contact-info>
         </div>
         <div class="business-hours-container">
             <div class="btn-container">
