--- a/src/app/shared/components/bd-contact-info/bd-contact-info.component.scss
+++ b/src/app/shared/components/bd-contact-info/bd-contact-info.component.scss
@@ -1,5 +1,5 @@
-@import '../../../../../../assets/styles/variables';
-@import '../../../../../../assets/styles/font-icons';
+@import '../../../../assets/styles/variables';
+@import '../../../../assets/styles/font-icons';
 
 $element-size: 18px;
 $text-margin: 5px;
