FSPA-385 refactor: rename commodity item

--- a/src/app/loads/components/load-view-mode-card/components/commodity-details/commodity-details.component.scss
+++ b/src/app/loads/components/load-view-mode-card/components/commodity-details/commodity-details.component.scss
@@ -1,6 +1,6 @@
 @import '../../../../../../assets/styles/variables';
 
-.commodity-string-container {
+.commodity-detail-container {
   display: flex;
   height: $form-control-height;
   background: $white;
@@ -12,7 +12,7 @@
     border-top: 0;
   }
 
-  .commodity-item {
+  .commodity-detail-item {
     display: flex;
     overflow: hidden;
     border-right: $border;
