--- a/src/app/loads/components/load-view-mode-card/components/commodity-details/commodity-details.component.html
+++ b/src/app/loads/components/load-view-mode-card/components/commodity-details/commodity-details.component.html
@@ -1,10 +1,10 @@
-<div class="commodity-string-container">
-    <div class="commodity-item">
+<div class="commodity-detail-container">
+    <div class="commodity-detail-item">
         <span>{{index}}</span>
     </div>
     <div
         *ngFor="let item of items;" 
-        class="commodity-item">
+        class="commodity-detail-item">
         <span>{{item}}</span>
     </div>
 </div>
