FSPA-385 refactor: create component properties to check pickup/dropoff type

--- a/src/app/loads/components/load-view-mode-card/components/trip-view/trip-view.component.html
+++ b/src/app/loads/components/load-view-mode-card/components/trip-view/trip-view.component.html
@@ -63,7 +63,7 @@
   </div>
   <div class="commodities-section" *ngIf="isExpanded">
     <div 
-        *ngIf="dropoffCommodities.length"
+        *ngIf="hasDropoffCommodities"
         class="commodities-container dropoff-border">
         <commodities-header 
           [titles]="commodityHeaders">
@@ -79,10 +79,10 @@
           </div>
     </div>
     <div 
-      *ngIf="pickupCommodities.length"
+      *ngIf="hasPickupCommodities"
       class="commodities-container pickup-border">
       <commodities-header 
-        *ngIf="!dropoffCommodities.length"
+        *ngIf="!hasDropoffCommodities"
         [titles]="commodityHeaders">
       </commodities-header>
         <commodity-details
