refactor stripped border displaying

--- a/src/app/loads/components/load-view-mode-card/load-view-mode-card.component.html
+++ b/src/app/loads/components/load-view-mode-card/load-view-mode-card.component.html
@@ -4,7 +4,7 @@
     [class.pickup]="isPickup"
     [class.dropoff]="isDropoff"
     [class.combined]="isCombined">
-        <div class="stripped-border" *ngIf="isCombined"></div>
+        <div class="stripped-border"></div>
         <div class="facility-info">
             <div class="title">{{stop.facility.name}}</div>
             <div class="info-item">
