refactor: rename commodity item to commodity column

--- a/src/app/loads/components/load-view-mode-card/components/commodity-details/commodity-details.component.html
+++ b/src/app/loads/components/load-view-mode-card/components/commodity-details/commodity-details.component.html
@@ -1,10 +1,10 @@
 <div class="commodity-detail-container">
-    <div class="commodity-detail-item">
+    <div class="commodity-detail-column">
         <span>{{index}}</span>
     </div>
     <div
-        *ngFor="let item of items;" 
-        class="commodity-detail-item">
-        <span>{{item}}</span>
+        *ngFor="let column of columns" 
+        class="commodity-detail-column">
+        <span>{{column}}</span>
     </div>
 </div>
