--- a/src/app/loads/components/load-view-mode-card/components/commodity-details/commodity-details.component.scss
+++ b/src/app/loads/components/load-view-mode-card/components/commodity-details/commodity-details.component.scss
@@ -12,7 +12,7 @@
     border-top: 0;
   }
 
-  .commodity-detail-item {
+  .commodity-detail-column {
     display: flex;
     overflow: hidden;
     border-right: $border;
