--- a/src/app/loads/components/load-stop-card/load-stop-card.component.html
+++ b/src/app/loads/components/load-stop-card/load-stop-card.component.html
@@ -13,7 +13,7 @@
           [width]="popupWidth"
           [horizontalOffset]="-10"
           [closeOnClickOutside]="closeOnClickOutside">
-          <company-popover [company]="load.customer" [companyBillingAddress]="load.customerBillingAddress" [companyAddress]="load.customerAddress"></company-popover>
+          <company-popover [company]="load.customer" [companyBillingLocation]="load.customerBillingLocation" [companyLocation]="load.customerLocation"></company-popover>
         </bd-popover-content>
       </span>
     </span>
