refactor: remove phone popover component

--- a/src/app/loads/components/load-view-mode-card/components/trip-view/trip-view.component.html
+++ b/src/app/loads/components/load-view-mode-card/components/trip-view/trip-view.component.html
@@ -29,17 +29,9 @@
       <div class="buttons-panel">
           <button class="icon-fax"></button>
           <button class="icon-call"></button>
-          <span [bd-popover]="phonePopover" [popoverOnHover]="true">
+          <span [bd-popover]="phoneNumber" [popoverOnHover]="true">
               <button class="icon-message"></button>
-                  <bd-popover-content
-                      #phonePopover
-                      placement="auto"
-                      [width]="100"
-                      [horizontalOffset]="-10"
-                      [closeOnClickOutside]="closeOnClickOutside">
-                           <phone-popover [phoneNumber]="phoneNumber"></phone-popover>
-                   </bd-popover-content>
-            </span>
+          </span>
         </div>
     </div>
     <div class="right-panel">
