add new icons for expand button

--- a/src/app/loads/components/load-view-mode-card/load-view-mode-card.component.html
+++ b/src/app/loads/components/load-view-mode-card/load-view-mode-card.component.html
@@ -16,8 +16,8 @@
         <div class="business-hours-container">
             <div class="btn-container">
                 <button 
-                    [class.icon-down-arrow]="!isExpanded" 
-                    [class.icon-up-arrow]="isExpanded" 
+                    [class.icon-down-arrow-bold]="!isExpanded" 
+                    [class.icon-up-arrow-bold]="isExpanded" 
                     (click)="onClick()">
                 </button>
             </div>
