--- a/src/assets/styles/font-icons.scss
+++ b/src/assets/styles/font-icons.scss
@@ -179,3 +179,15 @@
   }
 }
 
+.icon-up-arrow-bold {
+  &:before {
+    content: '\e91d';
+  }
+}
+
+.icon-down-arrow-bold {
+  &:before {
+    content: '\e91c';
+  }
+}
+
